# LucidShell

./: readme.md
core/: Cargo.toml
core/plugins/devtools/: Cargo.toml  devtools.json  how-to-use.md  manifest.json
core/plugins/devtools/src/: main.rs
core/src/: main.rs
