[package]
name = "lucidshell"
version = "0.1.6"
edition = "2025"
authors = ["CPScript"]
description = "White-Hat Security Shell with Sandboxing & Authorization"
license = "GPL-3.0 license"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "jobapi2",
    "winnt",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
    "tlhelp32",
    "synchapi",
    "guiddef",
    "iphlpapi",
    "winerror",
    "aclapi",
    "accctrl",
    "winbase",
    "libloaderapi",
    "errhandlingapi",
    "namedpipeapi",
    "minwinbase",
    "sddl",
    "std",
    "consoleapi",
    "ntdef",
    "processenv",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
debug = false

[[bin]]
name = "lucidshell"
path = "src/main.rs"
