[package]
name = "lucidshell-devtools"
version = "1.0.0"
edition = "2021"
authors = ["CPScript"]
description = "Development tools plugin for LucidShell with controlled network access"

[[bin]]
name = "devtools"
path = "src/main.rs"

[dependencies]
# No external dependencies :P

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
